--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/oswald": "^4.5.11",
+    "@fontsource/pacifico": "^4.5.9",
+    "@fontsource/roboto": "^4.5.8",
     "@next/font": "13.1.2",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
